# gtk-sample-app

./: .gitignore  CMakeLists.txt  LICENSE  MinGW.cmake  README.md  Windows.md  app.c  app.h  com-gitub-gtk-sample-app.desktop  config.h.in  main.c
data/: ui.glade  ui.glade~
po/fr/: sampleapp.mo  sampleapp.po
sampleapp/ui/: sampleapp.ui
share/glib-2.0/schemas/: sampleapp.gschema.xml
share/glib-2.0/schemas/windows/: sampleapp.gschema.xml
share/sampleapp/: sampleapp.glade
share/sampleapp/ui/: sampleapp.ui
src/: app.c  app.h  callbacks.c  main.c
utils/: rename_app.sh
